[package]
edition = "2021"
name    = "blood-oath"
publish = false
version = "0.1.0"

[workspace]
members = ["launchers/wasm", "launchers/native"]

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[features]
bundled     = ["bevy_embedded_assets"]
debug-graph = ["bevy_mod_debugdump"]
default     = ["dev"]
dev         = ["bevy/dynamic"]
# hot         = ["bevy/filesystem_watcher"]
release = ["bundled", "tracing/release_max_level_warn"]
trace   = ["bevy/trace"]
tracy   = ["bevy/trace", "bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "x11",
] }

bevy_asset_loader    = { version = "0.12", features = ["stageless", "2d"] }
bevy_ecs_tilemap     = { version = "0.7", features = ["atlas"] }
bevy_embedded_assets = { version = "0.4", optional = true }
bevy_mod_debugdump   = { version = "0.5", optional = true, default-features = false }
iyes_loopless        = { version = "0.7" }

# bracket-lib
bracket-geometry    = { git = "https://github.com/amethyst/bracket-lib", features = ['serde'] }
bracket-noise       = { git = "https://github.com/amethyst/bracket-lib" }
bracket-pathfinding = { git = "https://github.com/amethyst/bracket-lib" }
bracket-random      = { git = "https://github.com/amethyst/bracket-lib", features = ['serde'] }
bracket-rex         = { git = "https://github.com/amethyst/bracket-lib" }

# UI
bevy-inspector-egui = "0.13"
bevy_egui           = "0.16"

# Utility
bitflags      = "1"
bitvec        = { version = "1", features = ["serde"] }
lazy_static   = "1"
ordered-float = "3"
parking_lot   = "0.12"
serde         = { version = "1", features = ["derive"] }
tracing       = "0.1"

# keep the following in sync with Bevy's dependencies
anyhow = "1"
image  = { version = "0.24", default-features = false }
winit  = { version = "0.26.0", default-features = false }

[build-dependencies]
embed-resource = "1.4"
