[package]
edition = "2021"
name    = "blood-oath"
publish = false
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[features]
bundled     = ["bevy_embedded_assets"]
debug-graph = ["bevy_mod_debugdump"]
default     = ["dev"]
dev         = ["bevy/dynamic"]
hot         = ["bevy/filesystem_watcher"]
release     = ["bundled", "tracing/release_max_level_warn"]
trace       = ["bevy/trace"]
tracy       = ["bevy/trace", "bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "x11",
] }

bevy_embedded_assets = { version = "0.4", optional = true }
bevy_mod_debugdump   = { version = "0.5", optional = true, default-features = false }
iyes_loopless        = { version = "0.8" }

# bracket-lib
bracket-bevy        = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-embedding   = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-noise       = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-pathfinding = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-rex         = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }

# UI
bevy-inspector-egui = "0.13.0"
bevy_egui           = "0.16"

# Utility
bitvec      = { version = "1", features = ["serde"] }
lazy_static = "1"
once_cell   = "1.0"
parking_lot = "0.12"

colored    = "2"
direction  = { version = "0.18", features = ["serialize"] }
grid_2d    = { version = "0.15", features = ["serialize"] }
sark_grids = "0.5"

# Serialization
ron   = "0.8"
serde = { version = "1", features = ["derive"] }

# Utility
anyhow = "1"
clap   = { version = "4", features = ["derive"] }

derive_more = "0.99"
indicatif   = "0.17"
ndarray     = { version = "0.15", features = ["rayon"] }
noise       = { version = "0.8", features = ["images"] }
rand        = "0.8"
rayon       = "1"

# keep the following in sync with Bevy's dependencies
image = { version = "0.24", default-features = false }
winit = { version = "0.26.0", default-features = false }

[dev-dependencies]
tracing = "0.1"

[build-dependencies]
embed-resource = "1.4"
