[package]
edition   = "2021"
name      = "native-launcher"
version   = "0.1.0"
workspace = "../.."

[dependencies]
bevy = { version = "0.8", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "x11",
] }
blood-oath = { package = "blood-oath", path = "../.." }

# Utility
image = "~0.24"
winit = "~0.26"
